Return a more useful error when being inited with an empty string. Bug 187605, patch by bugzilla@chucker.rasdi.net (So"ren 'Chucker' Kuklau), r=dougt, sr=bzbarsky